--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Tarun, This is our first website.</h1>
+    <h1>Hello Tarun, hello This is our first website.</h1>
 </body>
 </html>
